<resources>
    <string name="app_name">PotatoHead</string>
    <string name="hat">hat</string>
    <string name="mustache">mustache</string>
    <string name="eyes">eyes</string>
    <string name="eyebrows">eyebrows</string>
    <string name="nose">nose</string>
    <string name="glasses">glasses</string>
    <string name="shoes">shoes</string>
    <string name="arms">arms</string>
    <string name="ears">ears</string>
    <string name="mouth">mouth</string>
    <string name="body">body</string>
    <string name="All">All</string>
    <string name="None">None</string>
</resources>