<?xml version="1.0" encoding="utf-8"?>
<!--
    04-11-2016
    M. Heijstek, 10800441
    This File describes the layout of the app in portrait mode
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.marty_000.myapp1.MainActivity">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:visibility="visible"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <ImageView
        android:id="@+id/bodyImage"
        android:visibility="visible"
        android:contentDescription="@string/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/body"/>
    <ImageView
        android:id="@+id/shoesImage"
        android:visibility="invisible"
        android:contentDescription="@string/shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shoes"/>
    <ImageView
        android:id="@+id/mouthImage"
        android:visibility="invisible"
        android:contentDescription="@string/mouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mouth"/>
    <ImageView
        android:id="@+id/noseImage"
        android:visibility="invisible"
        android:contentDescription="@string/nose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nose"/>
    <ImageView
        android:id="@+id/armsImage"
        android:visibility="invisible"
        android:contentDescription="@string/arms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arms"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/earsImage"
        android:visibility="invisible"
        android:contentDescription="@string/ears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ears"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/eyebrowsImage"
        android:visibility="invisible"
        android:contentDescription="@string/eyebrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eyebrows"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/eyesImage"
        android:visibility="invisible"
        android:contentDescription="@string/eyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eyes"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/glassesImage"
        android:visibility="invisible"
        android:contentDescription="@string/glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/glasses"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/hatImage"
        android:visibility="invisible"
        android:contentDescription="@string/hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hat"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ImageView
        android:id="@+id/mustacheImage"
        android:visibility="invisible"
        android:contentDescription="@string/mustache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mustache"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
    <TableLayout android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="13dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
            <Button
                android:text="@string/All"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="allClicked"
                android:id="@+id/allButton" />
            <CheckBox
                android:text="@string/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="bodyClicked"
                android:id="@+id/bodyCheckBox" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <CheckBox
                android:text="@string/mouth"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="mouthClicked"
                android:id="@+id/mouthCheckBox" />
            <CheckBox
                android:text="@string/shoes"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="shoesClicked"
                android:id="@+id/shoesCheckBox" />
        </TableRow>

        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <CheckBox
            android:text="@string/ears"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="earsClicked"
            android:id="@+id/earsCheckBox" />
        <CheckBox
            android:text="@string/nose"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="noseClicked"
            android:id="@+id/noseCheckBox" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <CheckBox
            android:text="@string/arms"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="armsClicked"
            android:id="@+id/armsCheckBox" />
            <CheckBox
                android:text="@string/eyebrows"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="eyebrowsClicked"
                android:id="@+id/eyebrowsCheckBox" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <CheckBox
                android:text="@string/eyes"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="eyesClicked"
                android:id="@+id/eyesCheckBox" />
            <CheckBox
                android:text="@string/glasses"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="glassesClicked"
                android:id="@+id/glassesCheckBox" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <CheckBox
                android:text="@string/hat"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="hatClicked"
                android:id="@+id/hatCheckBox" />
            <CheckBox
                android:text="@string/mustache"
                android:layout_column="1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="mustacheClicked"
                android:id="@+id/mustacheCheckBox" />
        </TableRow>

</TableLayout>
</RelativeLayout>
